--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "first-project",
   "version": "0.1.0",
+  "homepage": "https://rezy12.github.io/Portfolio2",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -17,7 +18,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
